# distributed_file_system

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  client  cmake_install.cmake  server
include/: file_system.hpp  network.hpp
src/: client.cpp  file_system.cpp  network.cpp  server.cpp
